syntax = "proto3";

option go_package = "github.com/multycloud/multy/api/proto/resourcespb";
option java_multiple_files = true;
option java_package = "dev.multy.api.resources";
option java_outer_classname = "ResourcesProto";

import "api/proto/commonpb/common.proto";

package dev.multy.resources;

message CreateVaultSecretRequest {
  VaultSecretArgs resource = 1;
}

message ReadVaultSecretRequest {
  string resource_id = 1;
}

message UpdateVaultSecretRequest {
  string resource_id = 1;
  VaultSecretArgs resource = 2;
}

message DeleteVaultSecretRequest {
  string resource_id = 1;
}


message VaultSecretGcpOverride {
  bool global_replication = 1;
}

message VaultSecretArgs {
  common.ChildResourceCommonArgs common_parameters = 1;
  string name = 2;
  string value = 3;
  string vault_id = 4;

  VaultSecretGcpOverride gcp_override = 5;
}

message VaultSecretAwsOutputs {
  string ssm_parameter_arn = 1;
}

message VaultSecretAzureOutputs {
  string key_vault_secret_id = 1;
}


message VaultSecretGcpOutputs {
  string secret_manager_secret_id = 1;
  string secret_manager_secret_version_id = 2;
}

message VaultSecretResource {
  common.CommonChildResourceParameters common_parameters = 1;
  string name = 2;
  string value = 3;
  string vault_id = 4;

  VaultSecretGcpOverride gcp_override = 5;
  VaultSecretAwsOutputs aws_outputs = 6;
  VaultSecretAzureOutputs azure_outputs = 7;
  VaultSecretGcpOutputs gcp_outputs = 8;
}
